[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-ladder-assessment"
version = "1.0.0"
description = "Self assessment & image generation script for engineering ladders"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/fkappes/engineering-ladder-assessment"
Repository = "https://github.com/fkappes/engineering-ladder-assessment"
Issues = "https://github.com/fkappes/engineering-ladder-assessment/issues"

[project.scripts]
engineering-ladder = "main:main"
