[project]
name = "engineering-ladder-assessment"
version = "1.0.0"
description = "Self assessment & image generation script for engineering ladders"
authors = [{name = "Florian Kappes"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/fkappes/engineering-ladder-assessment"
Repository = "https://github.com/fkappes/engineering-ladder-assessment"
Issues = "https://github.com/fkappes/engineering-ladder-assessment/issues"

[project.scripts]
engineering-ladder = "main:main"

[tool.poetry]
packages = [{include = "main.py"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
